		Formal Assessment: added subject name column to Internal Assessment view
		Library: added new type to store Audio/Visual equipment
		Markbook: added a class average row to the bottom of markbook views (when Weighting is enabled)
		Markbook: fixed order for first markbook column not saving properly
		Markbook: allow decimal values for markbook column attainment raw max
		School Admin: fixed timezone issue in display of dates in Special Days view
		Students: added ability to store internal documents against student application forms
		Students: fixed bug preventing upload of application form documents when cookies disabled
		Students: fixed bug preventing some application form language/citizenship fields from not being saved
		Students: added settable thresholds for issuing academic alerts
		Students: added settable thresholds for issuing behaviour alerts
		Students: added extra action to allow deleting of application forms to be disabled
		Timetable: fixed TT not being navigable if user is not involved in any timetable
		Timetable Admin: fix bulk checking bug in Tie Days to Dates
		Timetable Admin: widened listing of staff in Course Enrolment by Person to include all staff (not just Teaching staff)
		Timetable: added option to display either Day Of The Week or Timetable Day Short Name in column header of timetables
		Timetable: added name of person making a facility booking to timetable view by Person
		User Admin: fixed bug preventing some custom fields appearing when individual had multiple categories in multiple roles
		User Admin: fixed PHP Notice error caused when not addition roles chosen in user edit

v13.0.02
--------
Security
	System: fixed PHP code execution vulnerability
	System: fixed infinite nested index reload bug

v13.0.01
--------
Tweaks & Bug Fixes
	System: installer adjusted to provide compatibility with Softaculous
	System: fixed Resource tag issue in demo data
	Resources: fixed PHP notice in View Resources

v13.0.00
--------
	Headlines